refactor(model.Dish): changed List::get(0) calls into List::getFirst calls